# starshatter-ng

./: README.md
SSW/: .gitignore  CMakeLists.txt  NOTICE  README.rst
SSW/ArchiveEx/: Archive.cpp  Archive.h  CMakeLists.txt
SSW/DefinitionEx/: CMakeLists.txt
SSW/DefinitionEx/include/starshatter/definition/: Parser.h  Term.h
SSW/Doc/: 3DS File Format.txt  backstory.rst  q&a.rst
SSW/Doc/scripts/: kash_anlon.rst  promotions.rst  sara_hunter.rst
SSW/EngineEx/: CMakeLists.txt
SSW/EngineEx/include/: ArchiveDataSource.h
SSW/EngineEx/include/starshatter/: ColorFormat.h  Resource.h
SSW/EngineEx/src/: ColorFormat.cpp  Resource.cpp
SSW/EngineEx/test/: ColorFormat.cpp
SSW/FoundationEx/include/: Dictionary.inl.h  OverlayDataSource.h  Text.h  Utils.h
SSW/FoundationEx/include/starshatter/foundation/: reader.h
SSW/FoundationEx/src/: OverlayDataSource.cpp  Utils.cpp
SSW/FoundationEx/src/reader/: file.cpp  file.h
SSW/InfoEx/: CMakeLists.txt
SSW/InfoEx/include/: InfoEx.h
SSW/InfoEx/test/: directx.cpp
SSW/Magic2/: AlphaPalette.cpp  Command.cpp  Command.h  Editor.cpp  GridProps.cpp  M3DS.cpp  M3DS.h  Magic.h  MagicDoc.cpp  MagicView.cpp  MagicView.h  MainFrm.cpp  MainFrm.h  MaterialDialog.h  ModelView.h  Selection.cpp  Selection.h  StdAfx.cpp  StdAfx.h  TextureMapDialog.cpp  Thumbnail.h  UVMapView.h  resource.h
SSW/MagicEx/include/: MagicLoad.h  MagicLoad.inl.h  ModelFile3DS.h
SSW/MagicEx/src/: 3ds2mag.cpp  ModelFileMAG.cpp
SSW/NetEx/: HttpRequest.cpp  HttpRequest.h  HttpServer.cpp  HttpServer.h  HttpServlet.h  HttpServletExec.cpp  HttpServletExec.h  NetGram.cpp  NetHost.cpp  NetHost.h  NetLayer.cpp  NetLink.h  NetMsg.cpp  NetServer.cpp  NetSock.cpp  NetSock.h
SSW/StarsEx/: ActiveWindow.h  Asteroid.cpp  AudDlg.cpp  AudDlg.h  AudioConfig.cpp  AudioConfig.h  AwardDlg.h  AwardShowDlg.cpp  AwardShowDlg.h  BaseScreen.h  Bitmap.cpp  Bmp.cpp  Button.cpp  CMakeLists.txt  Callsign.cpp  Camera.cpp  Camera.h  CameraDirector.cpp  CameraView.h  Campaign.cpp  CampaignMissionFighter.h  CampaignMissionRequest.cpp  CampaignPlanAssignment.cpp  CampaignPlanAssignment.h  CampaignPlanEvent.h  CampaignPlanMission.h  CampaignSituationReport.cpp  CampaignSituationReport.h  CarrierAI.h  Clock.cpp  Clock.h  Clock.inl.h  CmdDlg.h  CmdForceDlg.cpp  CmdForceDlg.h  CmdIntelDlg.cpp  CmdIntelDlg.h  CmdMissionsDlg.cpp  CmdMsgDlg.cpp  CmdOrdersDlg.h  (+255 more)
SSW/StarsEx/test/: Color.cpp  ShipStats.cpp
SSW/Starserver/: Main.cpp  NetAdminChat.h  NetAdminServer.h  NetFileServlet.h  StarServer.h
SSW/Starshatter/: Main.cpp  Starshatter.rc.conf  resource.h
SSW/TypesEx/include/: Types.h
SSW/ci/: generate.sh
SSW/cmake/modules/: AddDownloadableResource.cmake  AddVersionFile.cmake  ApplyPatch.cmake  GitDescribe.cmake  GitToResource.cmake  InstallResource.cmake  apply_patch.cmake.in  wine.sh.in
SSW/cmake/toolchains/: i686-w64-mingw32.cmake
SSW/data/: .gitignore  CMakeLists.txt  files.sh
SSW/data/content/Campaigns/01/: T1.def  T4.def  T5.def  T7.def
SSW/data/content/Campaigns/03/: campaign.def
SSW/data/content/Missions/: 01-Alert.def  02-Wings.def  03-Honor.def  04-Sand.def  06-SEAD.def  08-Focus.def  09-Hounds.def  10-Angels.def
SSW/data/content/Multiplayer/: hawkmatch.def  wargames.def
SSW/data/content/Screens/: AudDlg.frm  AwardDlg.frm  CmdForceDlg.frm  CmdIntelDlg.frm  CmdMsgDlg.frm  CmdOrdersDlg.frm  CmpLoadDlg.frm  CmpSceneDlg.frm  CmpSelectDlg.frm  ConfirmDlg.frm  CtlDlg.frm  DebriefDlg.frm  EngDlg.frm  JoyDlg.frm  LoadDlg.frm  ModDlg.frm  ModInfoDlg.frm  MsnElemDlg.frm  MsnEventDlg.frm  MsnSelectDlg.frm  NavDlg.frm  NetAddrDlg.frm  NetClientDlg.frm  NetUnitDlg.frm  PlayerDlg.frm  TacRefDlg.frm  VidDlg.frm
SSW/data/content/Ships/Alliance_Fighters/: Eagle.def  Stormhawk.def
SSW/data/content/Ships/Alliance_Ships/: Devastator.def
SSW/data/content/Ships/Dantari_Ships/: Baikal.def  Goliath.def  Wolf.def
SSW/data/content/Ships/Marakan_Fighters/: Avenger.def  Jackal.def
SSW/data/content/Ships/Marakan_Ships/: Dragon.def  Imperial.def  Tiger.def  Volnaris.def
SSW/data/content/Ships/Pirate_Ships/: Cutlass.def
SSW/data/shatter/: magic.fx
SSW/data/shatter/Campaigns/01/: T1.def  T2.def  T4.def  campaign.def
SSW/data/shatter/Campaigns/04/: campaign.def
SSW/data/shatter/Campaigns/05/: campaign.def
SSW/data/shatter/Galaxy/Borova/: Borova.def
SSW/data/shatter/Missions/: 01-Alert.def  05-Execution.def  07-SLGAM.def  08-Focus.def  09-Hounds.def
SSW/data/shatter/Screens/: AudDlg.frm  CmdForceDlg.frm  CmdIntelDlg.frm  CmdMissionsDlg.frm  CmdMsgDlg.frm  CmdOrdersDlg.frm  CmdTheaterDlg.frm  CmpCompleteDlg.frm  CmpLoadDlg.frm  DebriefDlg.frm  EngDlg.frm  FileDlg.frm  FltDlg.frm  HelmDetail.frm  LoadDlg.frm  MsnObjDlg.frm  MsnWepDlg.frm  TacRefDlg.frm
source/FoundationEx/: CMakeLists.txt
source/FoundationEx/include/: DataSource.h  Dictionary.h  FilesystemDataSource.h  List.h  List.inl.h
source/FoundationEx/src/: DataSource.cpp  FilesystemDataSource.cpp  Text.cpp  reader.cpp
source/FoundationEx/src/reader/: buffer.h  buffer.inl.h
source/FoundationEx/test/: FilesystemDataSource.cpp  Text.cpp  reader.cpp
source/Magic2/: AlphaInverse.cpp  CMakeLists.txt  Editor.h  Grid.cpp  Grid.h  GridProps.h  Magic.cpp  MagicDoc.h  MaterialDialog.cpp  ModelView.cpp  Selector.cpp  Selector.h  SurfacePropertiesDialog.cpp  SurfacePropertiesDialog.h  TextureMapDialog.h  Thumbnail.cpp  UVMapView.cpp
source/MagicEx/: CMakeLists.txt
source/MagicEx/include/: ModelFileMAG.h  ModelFileOBJ.h
source/MagicEx/src/: MagicLoad.cpp  ModelFile3DS.cpp  ModelFileOBJ.cpp  convert.h  convert.inl.h  mag2obj.cpp  obj2mag.cpp
source/NetEx/: CMakeLists.txt  HttpClient.cpp  HttpClient.h  HttpParam.cpp  HttpParam.h  HttpResponse.cpp  HttpResponse.h  HttpServlet.cpp  HttpSession.cpp  HttpSession.h  NetAddr.cpp  NetAddr.h  NetClient.cpp  NetClient.h  NetGram.h  NetLayer.h  NetLink.cpp  NetMsg.h  NetPeer.cpp  NetPeer.h  NetServer.h
source/Starserver/: CMakeLists.txt  NetAdminChat.cpp  NetAdminServer.cpp  NetFileServlet.cpp  StarServer.cpp
source/Starshatter/: CMakeLists.txt
source/TypesEx/: CMakeLists.txt
(+569 files in other folders)
